--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -665,7 +665,7 @@
 % And every living thing that moved upon the earth perished—birds, livestock, animals, every creature that swarms upon the earth, and all mankind.
 \N 而每个在地上活动的活物都灭亡了---鸟类、牲畜、动物、每个在地上成群的生物，以及所有人类。
 % Of all that was on dry land, everything that had the breath of life in its nostrils died. 
-\N 所有那些在旱地上的，一切在其鼻孔有生命气息都死了。
+\N 所有之中在旱地上的，一切在其鼻孔有生命气息都死了。
 % And every living thing on the face of the earth was destroyed—man and livestock, crawling creatures and birds of the air; they were blotted out from the earth, and only Noah and those with him in the ark remained.
 \N 而每个在地表的活物都被摧毁---人和牲畜、爬行生物和空中的鸟类；他们从地上被抹去，而只有挪亚和在方舟中与他一起的那些留存。
 
