--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -672,6 +672,45 @@
 % And the waters prevailed upon the earth for 150 days.
 \N 而诸水在地上泛滥150日。
 
+% Genesis 8
+\section{第八章}
+
+% The Ark Rests on Ararat
+\subsection*{方舟安靠在亚拉腊上}
+
+% But God remembered Noah and all the animals and livestock that were with him in the ark. And God sent a wind over the earth, and the waters began to subside. 
+\N 但上帝记得挪亚和所有在方舟中与它一起的动物和牲畜。而上帝将风送遍大地，诸水就开始消退。
+% The springs of the deep and the floodgates of the heavens were closed, and the rain from the sky was restrained.
+\N 深渊的泉水和诸天的洪闸被关闭，而天空的雨被止住了。
+% The waters receded steadily from the earth, and after 150 days the waters had gone down.
+\N 诸水稳步地从大地退却，而在150日之后诸水已下降。
+
+% On the seventeenth day of the seventh month, the ark came to rest on the mountains of Ararat.
+\N 在七月的第七日，方舟来到并安靠在亚拉腊山峰上。
+% And the waters continued to recede until the tenth month, and on the first day of the tenth month the tops of the mountains became visible.
+\N 而诸水持续退却直到十月，在十月的第一日，众山峰的峰顶变得可见了。
+
+% Noah Sends a Raven and a Dove
+\subsection*{诺亚派出乌鸦和鸽子}
+
+% After forty days Noah opened the window he had made in the ark
+\N 四十日之后挪亚打开他在方舟中造的窗户
+% and sent out a raven. It kept flying back and forth until the waters had dried up from the earth.
+并派出一只乌鸦。它保持不断来回飞行直到诸水从大地干涸。
+
+% Then Noah sent out a dove to see if the waters had receded from the surface of the ground.
+\N 然后挪亚派出一只鸽子去看诸水是否已从地面的表面退却。
+% But the dove found no place to rest her foot, and she returned to him in the ark, because the waters were still covering the surface of all the earth. So he reached out his hand and brought her back inside the ark.
+\N 但那鸽子发现没地方歇她的脚，而她返回方舟到他身边，因为诸水仍然覆盖全地的表面。所以他伸出他的手并将她带回进方舟里面。
+
+% Noah waited seven more days and again sent out the dove from the ark.
+\N 挪亚又等待七日并再次将那只各自从方舟派出。
+% And behold, the dove returned to him in the evening with a freshly plucked olive leaf in her beak. So Noah knew that the waters had receded from the earth.
+\N 而看啊，那鸽子在晚上返回他身边，在她的喙中衔着一根现拔的橄榄叶。所以挪亚知道了诸水已从大地退却。
+
+% And Noah waited seven more days and sent out the dove again, but this time she did not return to him.
+\N 而挪亚又等待七日并再次派出那只鸽子，但这次她没有返回他身边。
+
 
 
 \thispagestyle{empty}
