--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -711,6 +711,46 @@
 % And Noah waited seven more days and sent out the dove again, but this time she did not return to him.
 \N 而挪亚又等待七日并再次派出那只鸽子，但这次她没有返回他身边。
 
+% Exiting the Ark
+\subsection*{出方舟}
+
+% In Noah’s six hundred and first year, on the first day of the first month, the waters had dried up from the earth. So Noah removed the covering from the ark and saw that the surface of the ground was dry.
+\N 在挪亚的六百零一年，在一月的第一日，诸水已从大地干涸。所以挪亚从方舟移除覆盖而看见地面的表面干了。
+% By the twenty-seventh day of the second month, the earth was fully dry.
+\N 到二月的第二十七日，大地就充分干了。
+
+% Then God said to Noah, 
+\N 然后上帝对挪亚说，
+% “Come out of the ark, you and your wife, along with your sons and their wives.
+\N “你和你的妻子，与你的儿子们和他们的妻子一道，从方舟出来。
+% Bring out all the living creatures that are with you—birds, livestock, and everything that crawls upon the ground—so that they can spread out over the earth and be fruitful and multiply upon it.”
+\N 将所有与你一起的生物带出---鸟类、牲畜和在地面爬行的一切---以使它们能在大地之上扩散，富有果实并在其上倍增。”
+
+% So Noah came out, along with his sons and his wife and his sons’ wives.
+\N 所以挪亚出来，与他的儿子们和他的妻子以及他儿子的妻子们一道。
+% Every living creature, every creeping thing, and every bird—everything that moves upon the earth—came out of the ark, kind by kind.
+\N 每一种生灵、每一种伏行物，和每一种鸟类---在地上活动的一切---逐类从方舟出来。
+
+% Noah Builds an Altar
+\subsection*{挪亚建造祭坛}
+
+% Then Noah built an altar to the LORD. And taking from every kind of clean animal and clean bird, he offered burnt offerings on the altar.
+\N 然后挪亚为耶和华建造了一座祭坛。而取自每类洁净的动物和洁净的鸟类，他在祭坛上奉上燔祭。
+% When the LORD smelled the pleasing aroma, He said in His heart, “Never again will I curse the ground because of man, even though every inclination of his heart is evil from his youth. And never again will I destroy all living creatures as I have done.
+\N 当耶和华闻到这愉悦的芬芳，祂在祂心里说，“我绝不会再次因为人而咒诅地面，即使他内心的每个倾向从他青年起就是邪恶的。而我绝不会再次如我已做的那样摧毁所有生灵。
+
+% As long as the earth endures, seedtime and harvest, cold and heat, summer and winter, day and night shall never cease.”
+\N 只要大地存续，
+
+    种时与收获、
+    
+    寒与热、
+    
+    夏与冬、
+    
+    昼与夜就必永不停息。”
+
+
 
 
 \thispagestyle{empty}
