--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -750,7 +750,40 @@
     
     昼与夜就必永不停息。”
 
+% Genesis 9
+\section{第九章}
 
+% The Covenant of the Rainbow
+\subsection*{彩虹圣约}
+
+% And God blessed Noah and his sons and said to them, “Be fruitful and multiply and fill the earth.
+\N 而上帝祝福挪亚和他的儿子们并对他们说，“要富有果实、倍增并充满大地。
+% The fear and dread of you will fall on every living creature on the earth, every bird of the air, every creature that crawls on the ground, and all the fish of the sea. They are delivered into your hand.
+\N 对你们的害怕与恐惧会降到地上每个生灵，空中的每个鸟类，地面上爬行的每个生物，以及海里的所有鱼上。它们被交付到你们手中。
+% Everything that lives and moves will be food for you; just as I gave you the green plants, I now give you all things.
+\N 活着的和活动的一切会作为你们的食物；正如我赐给你们绿植，我现在将万物赐给你们。
+% But you must not eat meat with its lifeblood still in it.
+\N 但你们决不能吃还在其中带生命血的肉。
+% And surely I will require the life of any man or beast by whose hand your lifeblood is shed. I will demand an accounting from anyone who takes the life of his fellow man:
+\N 而无疑，任何人或兽的手使你们的生命血流出，我都会要他的命。我会向任何取他同胞性命的人算账：
+
+% Whoever sheds the blood of man, by man his blood will be shed; for in His own image God has made mankind.
+\N 无论谁使人血流出，他的血都会被人所流；
+
+因为上帝依祂自身的形象制造人类。
+
+% But as for you, be fruitful and multiply; spread out across the earth and multiply upon it.” Then God said to Noah and his sons with him, 
+\N 但至于你们，要富有果实并倍增；
+
+扩散遍布大地并在其上倍增。”
+
+\N 然后上帝对挪亚和与他一起的他的儿子们说，
+% “Behold, I now establish My covenant with you and your descendants after you,
+\N “看啊，我现在确立我的圣约与你和你之后的后代，
+% and with every living creature that was with you—the birds, the livestock, and every beast of the earth—every living thing that came out of the ark.
+\N 以及与每个与你一起的生灵---鸟类、牲畜和地上每个走兽---每个从方舟出来的活物。
+% And I establish My covenant with you: Never again will all life be cut off by the waters of a flood; never again will there be a flood to destroy the earth.”
+\N 而我与你确立我的圣约：所有生命绝不会再次被洪灾的诸水剪除；绝不会再次有洪灾摧毁大地。”
 
 
 \thispagestyle{empty}
