--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -785,6 +785,35 @@
 % And I establish My covenant with you: Never again will all life be cut off by the waters of a flood; never again will there be a flood to destroy the earth.”
 \N 而我与你确立我的圣约：所有生命绝不会再次被洪灾的诸水剪除；绝不会再次有洪灾摧毁大地。”
 
+% And God said, “This is the sign of the covenant I am making between Me and you and every living creature with you, a covenant for all generations to come:
+\N 而上帝说，“这是在我和你以及每个与你一起的生灵之间立的圣约---为所有要来的世代的一个圣约---的记号:
+% I have set My rainbow in the clouds, and it will be a sign of the covenant between Me and the earth.
+\N 我已将我的彩虹设置在云彩中，而它会是在我与大地之间的圣约的一个记号。
+
+% Whenever I form clouds over the earth and the rainbow appears in the clouds,
+\N 无论何时我在大地之上形成云彩而那彩虹出现在云彩中，
+% I will remember My covenant between Me and you and every living creature of every kind. Never again will the waters become a flood to destroy all life.
+\N 我就会记起在我与你以及每类的每个生灵之间的我的圣约。诸水绝不会再次变成洪灾摧毁所有生命。
+% And whenever the rainbow appears in the clouds, I will see it and remember the everlasting covenant between God and every living creature of every kind that is on the earth.”
+\N 而无论何时彩虹出现在云彩中，我会看见它并记起上帝与地上每类的每个生灵之间的永久圣约。”
+
+% So God said to Noah, “This is the sign of the covenant that I have established between Me and every creature on the earth.”
+\N 所以上帝对挪亚说，“这是我已在我和地上每个生物确立的圣约的记号。”
+
+% Noah’s Shame and Canaan’s Curse
+\subsection*{挪亚的耻辱和迦南的诅咒}
+
+% The sons of Noah who came out of the ark were Shem, Ham, and Japheth. And Ham was the father of Canaan.
+\N 从方舟出来的挪亚的儿子是闪、含和雅弗。而含是迦南的父亲。
+% These three were the sons of Noah, and from them the whole earth was populated.
+\N 这三个是挪亚的儿子，而全地布满从他们繁衍的人。
+
+% Now Noah, a man of the soil, proceeded to plant a vineyard.
+\N 现在挪亚，一个地里的人，着手培植一个葡萄园。
+% But when he drank some of its wine, he became drunk and uncovered himself inside his tent.
+\N 但当他喝了一些葡萄酒时，他就喝醉了并在他的帐篷中赤裸着自己。
+% And Ham, the father of Canaan, saw his father’s nakedness and told his two brothers outside.
+\N 而含，迦南的父亲，看见他父亲的裸体就到外面告诉了他两个兄弟。
 
 \thispagestyle{empty}
 \newpage
