--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -343,7 +343,7 @@
 \subsection*{逐出乐园}
 
 % And the LORD God made garments of skin for Adam and his wife, and He clothed them.
-\N 而耶和华上帝为亚当和他的妻子造了兽皮的服装，并且祂为他们穿戴。
+\N 而耶和华上帝为亚当和他的妻子造了兽皮的衣裳，并且祂为他们穿戴。
 
 % Then the LORD God said, “Behold, the man has become like one of Us, knowing good and evil. And now, lest he reach out his hand and take also from the tree of life, and eat, and live forever...”
 \N 然后耶和华上帝说，“看那，那人已成为像我们其中一个一样知道善恶。而现在，以免他伸出他的手，也从那生命树摘取并吃，就永远活着\dots”
@@ -814,6 +814,27 @@
 \N 但当他喝了一些葡萄酒时，他就喝醉了并在他的帐篷中赤裸着自己。
 % And Ham, the father of Canaan, saw his father’s nakedness and told his two brothers outside.
 \N 而含，迦南的父亲，看见他父亲的裸体就到外面告诉了他两个兄弟。
+
+% Then Shem and Japheth took a garment and placed it across their shoulders, and walking backward, they covered their father’s nakedness. Their faces were turned away so that they did not see their father’s nakedness.
+\N 于是闪和雅弗取了一件衣裳并将其搭在他们的肩膀上，并倒着走，他们将他们的父亲的裸体覆盖。他们的脸转开以使他们不看见他们父亲的裸体。
+
+% When Noah awoke from his drunkenness and learned what his youngest son had done to him,
+\N 当挪亚从他醉酒中醒来并得知他最小的儿子对他已做的时，
+% he said, “Cursed be Canaan! A servant of servants shall he be to his brothers.”
+\N 他说，“迦南是该被咒诅的！他必成为他兄弟的众仆之仆。”
+
+% Shem’s Blessing and Noah’s Death
+\subsection*{闪的祝福和挪亚之死}
+
+% He also declared: “Blessed be the LORD, the God of Shem! May Canaan be the servant of Shem.
+\N 他还宣告：“耶和华、闪的上帝是当受崇拜的！愿迦南成为闪的仆人。”
+% May God expand the territory of Japheth; may he dwell in the tents of Shem, and may Canaan be his servant.”
+\N 愿上帝扩张雅弗的领地；愿他栖居在闪的帐篷众，而愿迦南成为他的仆人。”
+
+% After the flood, Noah lived 350 years.
+\N 洪灾之后，挪亚活了350年。
+% So Noah lived a total of 950 years, and then he died.
+\N 所以挪亚总共活了950年，然后他就死了。
 
 \thispagestyle{empty}
 \newpage
