--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -836,6 +836,49 @@
 % So Noah lived a total of 950 years, and then he died.
 \N 所以挪亚总共活了950年，然后他就死了。
 
+% Genesis 10
+\section{第十章}
+
+% The Table of Nations
+\subsection*{列民表}
+
+% This is the account of Noah’s sons Shem, Ham, and Japheth, who also had sons after the flood.
+\N 这是挪亚儿子闪、含和雅弗的记述，他们在洪灾之后也有儿子。
+
+% The Japhethites
+\subsubsection*{雅弗族}
+% The sons of Japheth: Gomer, Magog, Madai, Javan, Tubal, Meshech, and Tiras.
+\N 雅弗的子嗣：歌篾、玛各、玛代、雅完、土巴、米设和提拉。
+
+% The sons of Gomer: Ashkenaz, Riphath, and Togarmah.
+\N 歌篾的子嗣：亚实基拿、利法和陀迦玛。
+
+% And the sons of Javan: Elishah, Tarshish, the Kittites, and the Rodanites.
+\N 而雅完的子嗣：以利沙、他施、基提人和多单人。
+% From these, the maritime peoples separated into their territories, according to their languages, by clans within their nations.
+\N 源自这些人，海上民族按照他们的语言，以他们各邦中的部落分开进到他们的领地。
+
+% The Hamites
+\subsubsection*{含族}
+
+% The sons of Ham: Cush, Mizraim, Put, and Canaan.
+\N 含的子嗣：古实、麦西、弗和迦南。
+
+% The sons of Cush: Seba, Havilah, Sabtah, Raamah, and Sabteca.
+\N 古实的子嗣：西巴、哈腓拉、撒弗他、拉玛和撒弗提迦。
+
+% And the sons of Raamah: Sheba and Dedan.
+\N 拉玛的子嗣：示巴和底但。
+
+% Cush was the father of Nimrod, who began to be a mighty one on the earth.
+\N 古实是宁录的父亲，而他开始成为地上的一名勇士。
+% He was a mighty hunter befored the LORD; so it is said, “Like Nimrod, a mighty hunter before the LORD.”
+\N 他在耶和华面前是一位强大的猎手；所以有人说，“要像宁录，耶和华面前的一位强大猎手。”
+% His kingdom began in Babylon, Erech, Accad, and Calneh, in the land of Shinar.
+\N 他的国度始于示拿之地中的巴别、以力、亚甲和甲尼。
+
+
+
 \thispagestyle{empty}
 \newpage
 
