--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -868,7 +868,7 @@
 \N 古实的子嗣：西巴、哈腓拉、撒弗他、拉玛和撒弗提迦。
 
 % And the sons of Raamah: Sheba and Dedan.
-\N 拉玛的子嗣：示巴和底但。
+拉玛的子嗣：示巴和底但。
 
 % Cush was the father of Nimrod, who began to be a mighty one on the earth.
 \N 古实是宁录的父亲，而他开始成为地上的一名勇士。
@@ -876,6 +876,32 @@
 \N 他在耶和华面前是一位强大的猎手；所以有人说，“要像宁录，耶和华面前的一位强大猎手。”
 % His kingdom began in Babylon, Erech, Accad, and Calneh, in the land of Shinar.
 \N 他的国度始于示拿之地中的巴别、以力、亚甲和甲尼。
+% From that land he went forth into Assyria, where he built Nineveh, Rehoboth-Ir, Calah, 
+\N 他从那陆地进发到亚述，他在那里建造了尼尼微、利河伯、迦拉、
+% and Resen, which is between Nineveh and the great city of Calah.
+\N 和利鲜，它在尼尼微和大城迦拉之间。
+
+% Mizraim was the father of the Ludites, the Anamites, the Lehabites, the Naphtuhites,
+\N 麦西是路低人、亚拿米人、利哈比人、拿弗土希人、
+% the Pathrusites, the Casluhites (from whom the Philistines came), and the Caphtorites.
+\N 帕斯鲁细人、迦斯路希人（非利士人从他而来）和迦斐托人的父亲。
+
+% And Canaan was the father of Sidon his firstborn, and of the Hittites,
+\N 而迦南是他的长子西顿、及赫人、
+% the Jebusites, the Amorites, the Girgashites,
+\N 耶布斯人、亚摩利人、革迦撒人、
+% the Hivites, the Arkites, the Sinites,
+\N 希未人、亚基人、西尼人、
+% the Arvadites, the Zemarites, and the Hamathites.
+\N 亚瓦底人、洗玛利人、哈马人的父亲。
+
+% Later the Canaanite clans were scattered, 
+后来迦南部落被分散了，
+% and the borders of Canaan extended from Sidon toward Gerar as far as Gaza, and then toward Sodom, Gomorrah, Admah, and Zeboiim, as far as Lasha.
+\N 而迦南的边界从西顿扩展到基拉耳，远至迦萨，而然后到所多玛、蛾摩拉、押玛、洗扁，远至拉沙。
+
+% These are the sons of Ham according to their clans, languages, lands, and nations.
+\N 这些是含的子嗣，按他们的部落、语言、领土和邦族。
 
 
 
