--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -903,7 +903,40 @@
 % These are the sons of Ham according to their clans, languages, lands, and nations.
 \N 这些是含的子嗣，按他们的部落、语言、领土和邦族。
 
+% The Semites
+\subsubsection*{闪族}
 
+% And sons were also born to Shem, the older brother of Japheth; Shem was the forefather of all the sons of Eber.
+\N 而也有儿子从闪，雅弗的兄长出生；闪是希伯所有子嗣的先祖。
+
+% The sons of Shem: Elam, Asshur, Arphaxad, Lud, and Aram.
+\N 闪的子嗣：以拦、亚述、亚法撒、路德和亚兰。
+
+% The sons of Aram: Uz, Hul, Gether, and Mash.
+\N 亚兰的子嗣：乌斯、户勒、基帖和玛施。
+
+% Arphaxad was the father of Shelah, and Shelah was the father of Eber.
+\N 亚法撒是沙拉的父亲，而沙拉是希伯的父亲。
+
+% Two sons were born to Eber: One was named Peleg, because in his days the earth was divided, and his brother was named Joktan.
+\N 两个儿子从希伯出生：一个名叫法勒，因为在他的日子大地被分割，而他的兄弟名叫约坍。
+
+% And Joktan was the father of Almodad, Sheleph, Hazarmaveth, Jerah,
+\N 而约坍是亚摩答、沙列、哈萨玛非、耶拉、
+% Hadoram, Uzal, Diklah,
+\N 哈多兰、乌萨、德拉、
+% Obal, Abimael, Sheba,
+\N 俄巴路、亚比玛利、示巴、
+% Ophir, Havilah, and Jobab. All these were sons of Joktan.
+\N 阿斐、哈腓拉、约巴的父亲。所有这些人都是约坍的子嗣。
+% Their territory extended from Mesha to Sephar, in the eastern hill country.
+\N 他们的领地从米沙扩展到西发，在东部的山地。
+
+% These are the sons of Shem, according to their clans, languages, lands, and nations.
+\N 这些是闪的子嗣，按他们的部落、语言、领土和邦族。
+
+% All these are the clans of Noah’s sons, according to their generations and nations. From these the nations of the earth spread out after the flood.
+\N 所有这些都是挪亚子嗣的部落，按他们的世代和邦族。从这些人地上的列邦在洪灾后扩散。
 
 \thispagestyle{empty}
 \newpage
