--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -806,7 +806,7 @@
 % The sons of Noah who came out of the ark were Shem, Ham, and Japheth. And Ham was the father of Canaan.
 \N 从方舟出来的挪亚的儿子是闪、含和雅弗。而含是迦南的父亲。
 % These three were the sons of Noah, and from them the whole earth was populated.
-\N 这三个是挪亚的儿子，而全地布满从他们繁衍的人。
+\N 这三个是挪亚的儿子，而整个大地布满从他们繁衍的人。
 
 % Now Noah, a man of the soil, proceeded to plant a vineyard.
 \N 现在挪亚，一个地里的人，着手培植一个葡萄园。
@@ -937,6 +937,44 @@
 
 % All these are the clans of Noah’s sons, according to their generations and nations. From these the nations of the earth spread out after the flood.
 \N 所有这些都是挪亚子嗣的部落，按他们的世代和邦族。从这些人地上的列邦在洪灾后扩散。
+
+% Genesis 11
+\section{第十一章}
+
+% The Tower of Babel
+\subsection*{巴别塔}
+
+% Now the whole world had one language and a common form of speech.
+\N 现在整个世界只有一种语言和一种共同形式的口语。
+% And as people journeyed eastward, they found a plain in the land of Shinar and settled there.
+\N 而当族民向东旅行时，他们在示拿之地发现一块平原并在那里安家。
+
+% And they said to one another, “Come, let us make bricks and bake them thoroughly.” So they used brick instead of stone, and tar instead of mortar.
+\N 而他们对彼此说，“来，让我们造砖并将它们彻底烧硬。”所以他们使用砖替代石头，并用柏油替代灰泥。
+
+% “Come,” they said, “let us build for ourselves a city with a tower that reaches to the heavens, that we may make a name for ourselves and not be scattered over the face of all the earth.”
+\N “来，”他们说，“让我们为我们自己建造一座城，有一座塔到达诸天，以使我们能为我们自己立一个名字而不被分散到全地表上。”
+
+% Then the LORD came down to see the city and the tower that the sons of men were building.
+\N 然后耶和华降临来看察这城和人类子嗣们在建造的塔。
+% And the LORD said, “If they have begun to do this as one people speaking the same language, then nothing they devise will be beyond them.
+\N 而耶和华说，“假使他们作为讲相同语言的一族开始做这，那么他们策划的就没有什么会对他们不可能了。
+% Come, let Us go down and confuse their language, so that they will not understand one another’s speech.”
+\N 来，让我们降临并使他们的语言混乱，以使他们会不理解彼此的口语。”
+
+% So the LORD scattered them from there over the face of all the earth, and they stopped building the city.
+\N 所以耶和华将他们从那里分散到全地表上，而他们停止了建造那城。
+% That is why it is called Babel, for there the LORD confused the language of the whole world, and from that place the LORD scattered them over the face of all the earth.
+\N 这是为什么它被称为巴别，因为在那里耶和华将整个世界的语言混乱，而从那处耶和华将他们分散到全地表上。
+
+% Genealogy from Shem to Abram
+\subsection*{从闪到亚伯兰的家谱}
+
+% This is the account of Shem. Two years after the flood, when Shem was 100 years old, he became the father of Arphaxad.
+\N 这是关于闪的记述。在洪灾后两年，当闪100岁时，他成为亚法撒的父亲。
+% And after he had become the father of Arphaxad, Shem lived 500 years and had other sons and daughters.
+\N 而在他成为亚法撒的父亲之后，闪活了500年并有其他儿子和女儿。
+
 
 \thispagestyle{empty}
 \newpage
