--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -975,6 +975,44 @@
 % And after he had become the father of Arphaxad, Shem lived 500 years and had other sons and daughters.
 \N 而在他成为亚法撒的父亲之后，闪活了500年并有其他儿子和女儿。
 
+% When Arphaxad was 35 years old, he became the father of Shelah.
+\N 当亚法撒35岁时，他成为沙拉的父亲。
+% And after he had become the father of Shelah, Arphaxad lived 403 years and had other sons and daughters.
+\N 而在他成为沙拉的父亲之后，亚法撒活了403年并有其他儿子和女儿。
+
+% When Shelah was 30 years old, he became the father of Eber.
+\N 当沙拉30岁时，他成为希伯的父亲。
+% And after he had become the father of Eber, Shelah lived 403 years and had other sons and daughters.
+\N 而在他成为希伯的父亲之后，沙拉活了403年并有其他儿子和女儿。
+
+% When Eber was 34 years old, he became the father of Peleg.
+\N 当希伯34岁时，他成为法勒的父亲。
+% And after he had become the father of Peleg, Eber lived 430 years and had other sons and daughters.
+\N 而在他成为法勒的父亲之后，希伯活了430年并有其他儿子和女儿。
+
+% When Peleg was 30 years old, he became the father of Reu.
+\N 当法勒30岁时，他成为拉吴的父亲。
+% And after he had become the father of Reu, Peleg lived 209 years and had other sons and daughters.
+\N 而在他成为拉吴的父亲之后，法勒活了209年并有其他儿子和女儿。
+
+% When Reu was 32 years old, he became the father of Serug.
+\N 当拉吴32岁时，他成为西鹿的父亲。
+% And after he had become the father of Serug, Reu lived 207 years and had other sons and daughters.
+\N 而在他成为西鹿的父亲之后，拉吴活了207年并有其他儿子和女儿。
+
+% When Serug was 30 years old, he became the father of Nahor.
+\N 当西鹿30岁时，他成为拿鹤的父亲。
+% And after he had become the father of Nahor, Serug lived 200 years and had other sons and daughters.
+\N 而在他成为拿鹤的父亲之后，西鹿活了200年并有其他儿子和女儿。
+
+% When Nahor was 29 years old, he became the father of Terah.
+\N 当拿鹤29岁时，他成为他拉的父亲。
+% And after he had become the father of Terah, Nahor lived 119 years and had other sons and daughters.
+\N 而在他成为他拉的父亲之后，拿鹤活了119年并有其他儿子和女儿。
+
+% When Terah was 70 years old, he became the father of Abram, Nahor, and Haran.
+\N 当他拉70岁时，他成为亚伯兰、拿鹤和哈兰的父亲。
+
 
 \thispagestyle{empty}
 \newpage
