--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -979,34 +979,71 @@
 \N 当亚法撒35岁时，他成为沙拉的父亲。
 % And after he had become the father of Shelah, Arphaxad lived 403 years and had other sons and daughters.
 \N 而在他成为沙拉的父亲之后，亚法撒活了403年并有其他儿子和女儿。
+    \footnote {
+        七十士本（也见路3:35-36）：
+        % When Arphaxad was 135 years old, he became the father of Cainan.
+        当亚法撒135岁时，他成为该南的父亲。
+        % And after he had become the father of Cainan, Arphaxad lived 430 years and had other sons and daughters, and then he died.
+        而在他成为该南的父亲之后，亚法撒活了430年并有其他儿子和女儿，然后他就死了。
+        % When Cainan had lived 130 years, he became the father of Shelah.
+        当该南活了130年时，他成为沙拉的父亲。
+        % And after he had become the father of Shelah, Cainan lived 330 years and had other sons and daughters.
+        而在他成为沙拉的父亲之后，该南活了330年并有其他儿子和女儿。
+
+        译者注：现代旧约是根据马索拉文本，但根据这一家谱计算会发现亚伯拉罕出生时挪亚还活着，闪会比亚伯拉罕活的时间还长，而希伯甚至活到了雅各的时代，这是不合乎常理的。而若按七十士本则根本不存在这个问题，不仅如此马索拉文本漏掉了该南这一代，这与新约路加福音的家谱不一致。而按七十士本推算，人类文明诞生的时间大概在6000多年以前，这与现代考古高度吻合。我认同奥古斯丁关于七十士本是受圣灵启示的观点。
+    }
 
 % When Shelah was 30 years old, he became the father of Eber.
-\N 当沙拉30岁时，他成为希伯的父亲。
+\N 当沙拉30岁
+    \footnote {
+        七十士本：130岁
+    }
+时，他成为希伯的父亲。
 % And after he had become the father of Eber, Shelah lived 403 years and had other sons and daughters.
 \N 而在他成为希伯的父亲之后，沙拉活了403年并有其他儿子和女儿。
 
 % When Eber was 34 years old, he became the father of Peleg.
-\N 当希伯34岁时，他成为法勒的父亲。
+\N 当希伯34岁
+    \footnote {
+        七十士本：134岁
+    }
+时，他成为法勒的父亲。
 % And after he had become the father of Peleg, Eber lived 430 years and had other sons and daughters.
 \N 而在他成为法勒的父亲之后，希伯活了430年并有其他儿子和女儿。
 
 % When Peleg was 30 years old, he became the father of Reu.
-\N 当法勒30岁时，他成为拉吴的父亲。
+\N 当法勒30岁
+    \footnote {
+        七十士本：130岁
+    }
+时，他成为拉吴的父亲。
 % And after he had become the father of Reu, Peleg lived 209 years and had other sons and daughters.
 \N 而在他成为拉吴的父亲之后，法勒活了209年并有其他儿子和女儿。
 
 % When Reu was 32 years old, he became the father of Serug.
-\N 当拉吴32岁时，他成为西鹿的父亲。
+\N 当拉吴32岁
+    \footnote {
+        七十士本：132岁
+    }
+时，他成为西鹿的父亲。
 % And after he had become the father of Serug, Reu lived 207 years and had other sons and daughters.
 \N 而在他成为西鹿的父亲之后，拉吴活了207年并有其他儿子和女儿。
 
 % When Serug was 30 years old, he became the father of Nahor.
-\N 当西鹿30岁时，他成为拿鹤的父亲。
+\N 当西鹿30岁
+    \footnote {
+        七十士本：130岁
+    }
+时，他成为拿鹤的父亲。
 % And after he had become the father of Nahor, Serug lived 200 years and had other sons and daughters.
 \N 而在他成为拿鹤的父亲之后，西鹿活了200年并有其他儿子和女儿。
 
 % When Nahor was 29 years old, he became the father of Terah.
-\N 当拿鹤29岁时，他成为他拉的父亲。
+\N 当拿鹤29岁
+    \footnote {
+        七十士本：79岁
+    }
+时，他成为他拉的父亲。
 % And after he had become the father of Terah, Nahor lived 119 years and had other sons and daughters.
 \N 而在他成为他拉的父亲之后，拿鹤活了119年并有其他儿子和女儿。
 
