--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1050,6 +1050,24 @@
 % When Terah was 70 years old, he became the father of Abram, Nahor, and Haran.
 \N 当他拉70岁时，他成为亚伯兰、拿鹤和哈兰的父亲。
 
+% Terah’s Descendants
+\subsection*{他拉的后代}
+
+% This is the account of Terah. Terah became the father of Abram, Nahor, and Haran. And Haran became the father of Lot.
+\N 这是关于他拉的记述。他拉成为亚伯兰、拿鹤和哈兰的父亲。而哈兰成为罗得的父亲。
+% During his father Terah’s lifetime, Haran died in his native land, in Ur of the Chaldeans.
+\N 哈兰在他父亲他拉生前死在他的故土，在迦勒底的吾珥。
+
+% And Abram and Nahor took wives for themselves. Abram’s wife was named Sarai, and Nahor’s wife was named Milcah; she was the daughter of Haran, who was the father of both Milcah and Iscah.
+\N 而亚伯兰和拿鹤各自娶了妻子。亚伯兰的妻子名叫撒莱，而拿鹤的妻子名叫密迦；她是哈兰的女儿，而哈兰同是密迦和亦迦的父亲。
+% But Sarai was barren; she had no children.
+\N 但撒莱不育；她没有子女。
+
+% And Terah took his son Abram, his grandson Lot son of Haran, and his daughter-in-law Sarai the wife of Abram, and they set out from Ur of the Chaldeans for the land of Canaan. But when they arrived in Haran, they settled there.
+\N 而他拉带了他儿子亚伯兰、他的孙子、哈兰的儿子罗得，和他的儿媳、亚伯兰的妻子撒莱，而他们从迦勒底动身到迦南之地。但当他们抵达哈兰，他们在那里安家。
+% Terah lived 205 years, and he died in Haran.
+\N 他拉活了205年，而他死在了哈兰。
+
 
 \thispagestyle{empty}
 \newpage
