--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1068,6 +1068,25 @@
 % Terah lived 205 years, and he died in Haran.
 \N 他拉活了205年，而他死在了哈兰。
 
+% Genesis 12
+\section{第十二章}
+
+% The Call of Abram
+\subsection*{亚伯兰的召唤}
+
+% Then the LORD said to Abram, “Leave your country, your kindred, and your father’s household, and go to the land I will show you.
+\N 然后耶和华对亚伯兰说，“离开你的家乡、你的亲属及你父亲的家室，而去到我会展示给你的领地。
+
+% I will make you into a great nation, and I will bless you; I will make your name great, so that you will be a blessing.
+\N 我会使你成为一个大族，而我会祝福你；
+
+我会使你的名变得伟大，以使你会成为一个祝福。
+
+% I will bless those who bless you and curse those who curse you; and all the families of the earth will be blessed through you.”
+\N 我会祝福那些祝福你的，而咒诅那些咒诅你的；
+
+而地上所有家庭都会藉着你蒙福。”
+
 
 \thispagestyle{empty}
 \newpage
