--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -960,7 +960,7 @@
 % And the LORD said, “If they have begun to do this as one people speaking the same language, then nothing they devise will be beyond them.
 \N 而耶和华说，“假使他们作为讲相同语言的一族开始做这，那么他们策划的就没有什么会对他们不可能了。
 % Come, let Us go down and confuse their language, so that they will not understand one another’s speech.”
-\N 来，让我们降临并使他们的语言混乱，以使他们会不理解彼此的口语。”
+\N 来，让我们降下并使他们的语言混乱，以使他们会不理解彼此的口语。”
 
 % So the LORD scattered them from there over the face of all the earth, and they stopped building the city.
 \N 所以耶和华将他们从那里分散到全地表上，而他们停止了建造那城。
@@ -1086,6 +1086,31 @@
 \N 我会祝福那些祝福你的，而咒诅那些咒诅你的；
 
 而地上所有家庭都会藉着你蒙福。”
+
+% So Abram departed, as the LORD had directed him, and Lot went with him. Abram was seventy-five years old when he left Haran.
+\N 所以亚伯兰离去，如耶和华已指引他的，而罗得跟他一起去。亚伯兰75岁当他离开哈兰时。
+% And Abram took his wife Sarai, his nephew Lot, and all the possessions and people they had acquired in Haran, and set out for the land of Canaan.
+\N 而亚伯兰带了他的妻子撒莱，他的外甥罗得，和他们在哈兰已获取的所有财产和人员，就动身到迦南之地。
+
+% When they came to the land of Canaan,
+当他们来到迦南之地时，
+% Abram traveled through the land as far as the site of the Oak of Moreh at Shechem. And at that time the Canaanites were in the land.
+\N 亚伯兰穿越那陆地远至在示剑摩利橡树的地点。而在那时迦南人在那陆地了。
+
+% Then the LORD appeared to Abram and said, “I will give this land to your offspring.” So Abram built an altar there to the LORD, who had appeared to him.
+\N 然后耶和华向亚伯兰显现并说，“我会将这块陆地赐给你的孩子。”所以亚伯兰在那里为已向他显现的耶和华建造了一座祭坛。
+
+% From there Abram moved on to the hill country east of Bethel and pitched his tent, with Bethel to the west and Ai to the east. There he built an altar to the LORD, and he called on the name of the LORD.
+\N 从那里亚伯兰继续移动到伯特利东边的山地并搭起他的帐篷，伯特利在西边，艾在东边。在那里他为耶和华建造了一座祭坛，而他求靠耶和华的名。
+
+% And Abram journeyed on toward the Negev.
+\N 而亚伯兰继续向尼革夫旅行。
+
+% Abram and Sarai in Egypt
+\subsection*{亚伯兰和撒莱在埃及}
+
+% Now there was a famine in the land. So Abram went down to Egypt to live there for a while because the famine was severe.
+\N 现在在那陆地上有一场饥荒。所以亚伯兰下到埃及以在那里生活一段时间，因为饥荒严重。
 
 
 \thispagestyle{empty}
