--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1111,6 +1111,34 @@
 
 % Now there was a famine in the land. So Abram went down to Egypt to live there for a while because the famine was severe.
 \N 现在在那陆地上有一场饥荒。所以亚伯兰下到埃及以在那里生活一段时间，因为饥荒严重。
+% As he was about to enter Egypt, he said to his wife Sarai, “Look, I know that you are a beautiful woman,
+\N 当他快要进入埃及时，他对他的妻子撒莱说，“看，我直到你是一个漂亮的女人，
+% and when the Egyptians see you, they will say, ‘This is his wife.’ Then they will kill me but will let you live.
+\N 而当埃及人看见你，他们会说，‘这是他的妻子。’然后他们会杀我但会留你存活。
+% Please say you are my sister, so that I will be treated well for your sake, and on account of you my life will be spared.”
+\N 请说你是我的妹妹，以使我会因你的缘故被善待，而因为你我的性命会被保全。”
+
+% So when Abram entered Egypt, the Egyptians saw that the woman was very beautiful.
+\N 所以当亚伯兰进入埃及，埃及人看见那女人非常漂亮。
+% When Pharaoh’s officials saw Sarai, they commended her to him, and she was taken into the palace of Pharaoh.
+\N 当法老的官员看见撒莱，他们将她举荐给他，她就被带进法老的皇宫中。
+% He treated Abram well on her account, and Abram acquired sheep and cattle, male and female donkeys, menservants and maidservants, and camels.
+\N 法老因为她就善待亚伯兰，而亚伯兰获取到牛羊、公驴和母驴、男仆和女仆、和骆驼。
+
+% The LORD, however, afflicted Pharaoh and his household with severe plagues because of Abram’s wife Sarai.
+\N 然而，耶和华因亚伯兰的妻子撒莱，使法老和他的家室染患严重的瘟疫。
+% So Pharaoh summoned Abram and asked, “What have you done to me? Why didn’t you tell me she was your wife?
+\N 所以法老召见亚伯兰并问，“你对我做了什么？为什么你不告诉我她是你的妻子？
+% Why did you say, ‘She is my sister,’ so that I took her as my wife? Now then, here is your wife. Take her and go!”
+\N 为什么你说，‘她是我的妹妹，’以使我娶她作我的妻子？那么现在，这是你的妻子。带她走！”
+
+% Then Pharaoh gave his men orders concerning Abram, and they sent him away with his wife and all his possessions.
+\N 然后法老给他的人们关涉亚伯兰的告令，他们就将他与他的妻子和他所有的财产一起送走。
+
+
+
+
+
 
 
 \thispagestyle{empty}
