--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -369,9 +369,9 @@
 \N 后来她生下该隐的兄弟亚伯。
 
 % Now Abel was a keeper of sheep, while Cain was a tiller of the soil.
-现在亚伯是个守护绵羊的，而该隐是个耕种土地的。
+现在亚伯是个守护绵羊的，而该隐是个耕种田地的。
 % So in the course of time, Cain brought some of the fruit of the soil as an offering to the LORD,
-\N 所以一段时间后，该隐将土地的一些果实作为供品带给耶和华，
+\N 所以一段时间后，该隐将田地的一些果实作为供品带给耶和华，
 % while Abel brought the best portions of the firstborn of his flock.
 \N 而亚伯带了他羊群中头生的最好的部分。
 
@@ -1098,7 +1098,7 @@
 \N 亚伯兰穿越那陆地远至在示剑摩利橡树的地点。而在那时迦南人在那陆地了。
 
 % Then the LORD appeared to Abram and said, “I will give this land to your offspring.” So Abram built an altar there to the LORD, who had appeared to him.
-\N 然后耶和华向亚伯兰显现并说，“我会将这块陆地赐给你的孩子。”所以亚伯兰在那里为已向他显现的耶和华建造了一座祭坛。
+\N 然后耶和华向亚伯兰显现并说，“我会将这块土地赐给你的孩子。”所以亚伯兰在那里为已向他显现的耶和华建造了一座祭坛。
 
 % From there Abram moved on to the hill country east of Bethel and pitched his tent, with Bethel to the west and Ai to the east. There he built an altar to the LORD, and he called on the name of the LORD.
 \N 从那里亚伯兰继续移动到伯特利东边的山地并搭起他的帐篷，伯特利在西边，艾在东边。在那里他为耶和华建造了一座祭坛，而他求靠耶和华的名。
@@ -1110,7 +1110,7 @@
 \subsection*{亚伯兰和撒莱在埃及}
 
 % Now there was a famine in the land. So Abram went down to Egypt to live there for a while because the famine was severe.
-\N 现在在那陆地上有一场饥荒。所以亚伯兰下到埃及以在那里生活一段时间，因为饥荒严重。
+\N 现在在那土地上有一场饥荒。所以亚伯兰下到埃及以在那里生活一段时间，因为饥荒严重。
 % As he was about to enter Egypt, he said to his wife Sarai, “Look, I know that you are a beautiful woman,
 \N 当他快要进入埃及时，他对他的妻子撒莱说，“看，我直到你是一个漂亮的女人，
 % and when the Egyptians see you, they will say, ‘This is his wife.’ Then they will kill me but will let you live.
@@ -1135,8 +1135,41 @@
 % Then Pharaoh gave his men orders concerning Abram, and they sent him away with his wife and all his possessions.
 \N 然后法老给他的人们关涉亚伯兰的告令，他们就将他与他的妻子和他所有的财产一起送走。
 
+% Genesis 13
+\section{第十三章}
 
+% Abram and Lot Part Ways
+\subsection*{亚伯兰和罗得分道}
 
+% So Abram went up out of Egypt into the Negev—he and his wife and all his possessions—and Lot was with him.
+\N 所以亚伯兰向上走离开埃及进到尼革夫---他和他的妻子以及他所有的财产--罗得也与他一同。
+% And Abram had become extremely wealthy in livestock and silver and gold.
+\N 而亚伯兰在牲畜、白银和黄金上已变得极其富足。
+
+% From the Negev he journeyed from place to place toward Bethel, until he came to the place between Bethel and Ai where his tent had formerly been pitched,
+\N 从尼革夫他向着伯特利从一处旅行到另一处，直到他来到伯特利和艾之间、他的帐篷从前搭起的地方，
+% to the site where he had built the altar. And there Abram called on the name of the LORD.
+\N 来到他曾建造祭坛的地点。并在那里亚伯兰求靠耶和华的名。
+
+% Now Lot, who was traveling with Abram, also had flocks and herds and tents.
+\N 现在罗得，他与亚伯兰一起旅行，也有羊群、牛群和帐篷。
+% But the land was unable to support both of them while they stayed together, for they had so many possessions that they were unable to coexist.
+\N 但他们呆一起，那土地就无能支持他们俩，因为他们有如此多的财产一致他们无能共存。
+% And there was discord between the herdsmen of Abram and the herdsmen of Lot. At that time the Canaanites and the Perizzites were also living in the land.
+\N 在亚伯兰的牧民和罗得的牧民之间就有不和。在那时迦南人和比利洗人也生活在那土地上。
+
+% So Abram said to Lot, “Please let there be no contention between you and me, or between your herdsmen and my herdsmen. After all, we are kinsmen.
+\N 所以亚伯兰对罗得说，“请让你和我之间、或你的牧民和我的牧民之间没有争执。毕竟，我们是亲戚。
+% Is not the whole land before you? Now separate yourself from me. If you go to the left, I will go to the right; if you go to the right, I will go to the left.”
+\N 在你面前不是整个陆地吗？现在将你自己与我分开。如果你向左走，我会向右走；如果你向右走，我就会向左走。”
+
+% Lot Proceeds toward Sodom
+\subsection*{罗得向索多玛行进}
+
+% And Lot looked out and saw that the whole plain of the Jordan, all the way to Zoar, was well watered like the garden of the LORD, like the land of Egypt. (This was before the LORD destroyed Sodom and Gomorrah.)
+\N 而罗得观望并看见约旦的整个平原，一直到琐珥，都被浇灌得像耶和华的园子，像埃及的土地。（这是在耶和华摧毁索多玛和蛾摩拉之前。）
+% So Lot chose the whole plain of the Jordan for himself and set out toward the east. And Abram and Lot parted company.
+\N 所以罗得为他自己选择了约旦的整个平原并向东动身。亚伯兰和罗得就分道扬镳了。
 
 
 
