--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1171,6 +1171,42 @@
 % So Lot chose the whole plain of the Jordan for himself and set out toward the east. And Abram and Lot parted company.
 \N 所以罗得为他自己选择了约旦的整个平原并向东动身。亚伯兰和罗得就分道扬镳了。
 
+% Abram lived in the land of Canaan, but Lot settled in the cities of the plain and pitched his tent toward Sodom.
+\N 亚伯兰生活在迦南之地，罗得却安家在平原的城市中并向着索多玛搭起他的帐篷。
+% But the men of Sodom were wicked, sinning greatly against the LORD.
+\N 但索多玛的人们是邪恶的，对耶和华犯罪巨大。
+
+% God Renews the Promise to Abram
+\subsection*{上帝对亚伯兰更新应许}
+
+% After Lot had departed, the LORD said to Abram, “Now lift up your eyes from the place where you are, and look to the north and south and east and west, 
+\N 在罗得已离去后，耶和华对亚伯兰说，“现在从你所在的地方举目，并看向北边、南边、东边和西边，
+% for all the land that you see, I will give to you and your offspring forever.
+\N 因为你看见的所有土地，我会永远赐给你和你的孩子。
+
+% I will make your offspring like the dust of the earth, so that if one could count the dust of the earth, then your offspring could be counted.
+\N 我会使你的孩子像地上的尘土，以致如果有人能数算地上的尘土，那么你的孩子也能被数算。
+% Get up and walk around the land, through its length and breadth, for I will give it to you.”
+\N 起身并纵横巡游这土地，因为我会将它赐给你。”
+
+% So Abram moved his tent and went to live near the Oaks of Mamre at Hebron, where he built an altar to the LORD.
+\N 所以亚伯兰移动他的帐篷并走去生活在希伯仑幔利的橡树附近，他在那里为耶和华建造了一座祭坛。
+
+% Genesis 14
+\section{第十四章}
+
+% The War of the Kings
+\subsection*{诸王之战}
+
+% In those days Amraphel king of Shinar, Arioch king of Ellasar, Chedorlaomer king of Elam, and Tidal king of Goiim
+\N 在那些日子，示拿王暗拉非、以拉撒王亚略、以拦王基大老玛，和戈印王提达
+% went to war against Bera king of Sodom, Birsha king of Gomorrah, Shinab king of Admah, Shemeber king of Zeboiim, and the king of Bela (that is, Zoar).
+对索多玛王比拉、蛾摩拉王比沙、押玛王示纳、洗扁王善以别、和比拉（那就是琐珥）王进行战争。
+
+% The latter five came as allies to the Valley of Siddim (that is, the Salt Sea). 
+\N 后面五王作为联盟来到西订（那就是盐海）谷。
+% For twelve years they had been subject to Chedorlaomer, but in the thirteenth year they rebelled.
+\N 他们已顺从于基大老玛十二年，但在第十三年他们叛变了。
 
 
 
