--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -1159,7 +1159,7 @@
 \N 在亚伯兰的牧民和罗得的牧民之间就有不和。在那时迦南人和比利洗人也生活在那土地上。
 
 % So Abram said to Lot, “Please let there be no contention between you and me, or between your herdsmen and my herdsmen. After all, we are kinsmen.
-\N 所以亚伯兰对罗得说，“请让你和我之间、或你的牧民和我的牧民之间没有争执。毕竟，我们是亲戚。
+\N 所以亚伯兰对罗得说，“请让你和我之间、或你的牧民和我的牧民之间没有争执。毕竟，我们是亲人。
 % Is not the whole land before you? Now separate yourself from me. If you go to the left, I will go to the right; if you go to the right, I will go to the left.”
 \N 在你面前不是整个陆地吗？现在将你自己与我分开。如果你向左走，我会向右走；如果你向右走，我就会向左走。”
 
@@ -1201,12 +1201,46 @@
 % In those days Amraphel king of Shinar, Arioch king of Ellasar, Chedorlaomer king of Elam, and Tidal king of Goiim
 \N 在那些日子，示拿王暗拉非、以拉撒王亚略、以拦王基大老玛，和戈印王提达
 % went to war against Bera king of Sodom, Birsha king of Gomorrah, Shinab king of Admah, Shemeber king of Zeboiim, and the king of Bela (that is, Zoar).
-对索多玛王比拉、蛾摩拉王比沙、押玛王示纳、洗扁王善以别、和比拉（那就是琐珥）王进行战争。
+\N 对索多玛王比拉、蛾摩拉王比沙、押玛王示纳、洗扁王善以别、和比拉（那就是琐珥）王进行战争。
 
 % The latter five came as allies to the Valley of Siddim (that is, the Salt Sea). 
 \N 后面五王作为联盟来到西订（那就是盐海）谷。
 % For twelve years they had been subject to Chedorlaomer, but in the thirteenth year they rebelled.
 \N 他们已顺从于基大老玛十二年，但在第十三年他们叛变了。
+
+% In the fourteenth year, Chedorlaomer and the kings allied with him went out and defeated the Rephaites in Ashteroth-karnaim, the Zuzites in Ham, the Emites in Shaveh-kiriathaim,
+\N 在第十四年，基大老玛和与他联盟的诸王出兵并击败了在亚特律加宁的利乏音人、在哈麦的苏西人、在沙微基列亭的以米人，
+% and the Horites in the area of Mount Seir, as far as El-paran, which is near the desert.
+\N 以及在西珥山区域的何利人，远至沙漠附近的伊勒巴兰。
+% Then they turned back to invade En-mishpat (that is, Kadesh), and they conquered the whole territory of the Amalekites, as well as the Amorites who lived in Hazazon-tamar.
+\N 然后他们折回入侵安密巴（那就是加低斯），而他们征服了亚玛力人的整个领地，以及生活在哈洗逊他玛的亚摩利人。
+
+% Then the king of Sodom, the king of Gomorrah, the king of Admah, the king of Zeboiim, and the king of Bela (that is, Zoar) marched out and arrayed themselves for battle in the Valley of Siddim
+\N 然后索多玛王、蛾摩拉王、押玛王、洗扁王和比拉（那就是琐珥）王行军并在西订谷布阵作战，
+% against Chedorlaomer king of Elam, Tidal king of Goiim, Amraphel king of Shinar, and Arioch king of Ellasar—four kings against five.
+\N 对抗以拦王基大老玛、戈印王提达、示拿王暗拉非，和以拉撒王亚略---四王对五王。
+
+% Abram Rescues Lot
+\subsection*{亚伯兰营救罗得}
+
+% Now the Valley of Siddim was full of tar pits, and as the kings of Sodom and Gomorrah fled, some men fell into the pits, but the survivors fled to the hill country.
+\N 现在西订谷满是柏油坑，而当索多玛和蛾摩拉的诸王逃跑时，一些人掉入坑中，但幸存者逃到了山地。
+
+% The four kings seized all the goods of Sodom and Gomorrah and all their food, and they went on their way.
+\N 那四王夺取了索多玛和蛾摩拉的所有物品和他们所有食物，而他们继续上路。
+% They also carried off Abram’s nephew Lot and his possessions, since Lot was living in Sodom.
+\N 他们也携走了亚伯兰的外甥罗得和他的财产，因为罗得正在索多玛生活。
+
+% Then an escapee came and reported this to Abram the Hebrew. Now Abram was living near the Oaks of Mamre the Amorite, a brother of Eshcol and Aner, all of whom were bound by treaty to Abram.
+\N 那时一个逃脱者来到并将这报告给希伯来人亚伯兰。现在亚伯兰正在亚摩利人幔利的橡树附近生活，幔利是以实各和亚乃的弟兄，他们都与亚伯兰有条约约束。
+% And when Abram heard that his relative had been captured, he mobilized the 318 trained men born in his household, and they set out in pursuit as far as Dan.
+\N 而当亚伯兰听到他的亲戚已被俘获，他动员了318名在他家室出生受训的人，而他们动身追捕远至但。
+
+% During the night, Abram divided his forces and routed Chedorlaomer’s army, pursuing them as far as Hobah, north of Damascus.
+\N 在夜间，亚伯兰将他的兵力分队并击溃了基大老玛的军队，追捕他们远至大马色北边的何巴。
+% He retrieved all the goods, as well as his relative Lot and his possessions, together with the women and the rest of the people.
+\N 他寻回了所有物品，还有他的亲戚罗得和他的财产，连同女人和剩余的民众。
+
 
 
 
